created basic structure; created navigation; created nav-bar;

--- a/ACES-Client/src/styles.scss
+++ b/ACES-Client/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+$basic-rust: rgb(147, 75, 75);
+$basic-rust-dark: rgb(109, 55, 55);
+$basic-rust-light: rgb(184, 116, 116);
+
+.body {
+  margin: 0;
+}
